--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
     </div>
 
     <section class="pahlawanSection" >
-        
+        <h1>Pahlawan</h1>
+        <div class="content-pahlawan">
+            
+        </div>
     </section>
 
     <!-- JAVASCRIPT -->
