Edit JS Scrolling

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
         <ul>
 
-            <li><a href="#home">Home</a></li>
-            <li><a href="#">Pahlawan</a></li>
-            <li><a href="#">Our Team</a></li>
+            <li><a href="#home" class="page-scroll">Home</a></li>
+            <li><a href="#pahlawan" class="page-scroll">Pahlawan</a></li>
+            <li><a href="#team" class="page-scroll">Our Team</a></li>
         </ul>
     </nav>
 
@@ -42,8 +42,8 @@
             <h1 class="w3-left w3-animate-bottom">Selamat Hari Pahlawan <br>10 November</h1>
         </div>
     </div>
-
-    <section class="pahlawanSection" >
+    
+    <section class="pahlawanSection" id="pahlawan">
         <h1>Pahlawan</h1>
         <div class="content-pahlawan">
             
