Menambahkan Team Section

--- a/index.html
+++ b/index.html
@@ -42,11 +42,40 @@
             <h1 class="w3-left w3-animate-bottom">Selamat Hari Pahlawan <br>10 November</h1>
         </div>
     </div>
-    
+
+    <!-- pahlawan -->
     <section class="pahlawanSection" id="pahlawan">
         <h1>Pahlawan</h1>
         <div class="content-pahlawan">
-            
+
+        </div>
+    </section>
+
+    <!-- our team -->
+    <section class="teamSection" id="team">
+        <h1>Our Team</h1>
+        <div class="content-team">
+            <div class="box-team">
+                <div class="team">
+                    <div class="border-wrapper">
+                        <img src="http://fullstackdesigner.id/assets/images/fsd/instruktur/1.png" alt="Rizal">
+                    </div>
+                    <div class="text-team">
+                        <h4>Ahmad Rizal</h4>
+                        <h5>STUDENT | DEVELOPER</h5>
+                    </div>
+                </div>
+                <div class="team">
+                    <div class="border-wrapper">
+                        <img src="http://fullstackdesigner.id/assets/images/fsd/instruktur/2.png" alt="Kukuh">
+                    </div>
+                    <div class="text-team">
+                        <h4>Kukuh Wildan</h4>
+                        <h5>STUDENT | DESIGNER</h5>
+                    </div>
+                </div>
+                <div class="break"></div>
+            </div>
         </div>
     </section>
 
