--- a/index.html
+++ b/index.html
@@ -50,20 +50,90 @@
 
     <!-- pahlawan -->
     <section class="pahlawanSection" id="pahlawan">
-        <h1 data-aos="fade-up" data-aos-duration="1250" data-aos-easing="ease">Pahlawan</h1>
+        <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-easing="ease">Pahlawan</h1>
         <div class="content-pahlawan">
+            <ul class="box-pahlawan">
+                <li>
+                    <div class="left-side-pahlawan" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+                        <img src="img/hero-1.jpg">
+                    </div>
+                    <div class="right-side-pahlawan">
+                        <h2 class="hero-name" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="700">Ir.
+                            Soekarno </h2>
+                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="850">
+                            Dr. Ir. H. Soekarno adalah Presiden pertama Republik Indonesia yang menjabat pada periode
+                            1945–1967. Ia memainkan peranan penting dalam memerdekakan bangsa Indonesia dari penjajahan
+                            Belanda. Ia adalah Proklamator Kemerdekaan Indonesia yang terjadi pada tanggal 17 Agustus
+                            1945. Soekarno adalah yang pertama kali mencetuskan konsep mengenai Pancasila sebagai dasar
+                            negara Indonesia dan ia sendiri yang menamainya.
 
+                            
+                        </p>
+                    </div>
+                    <div class="break"></div>
+                </li>
+                <li>
+                    <div class="left-side-pahlawan" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+                        <img src="img/hero-2.jpg">
+                    </div>
+                    <div class="right-side-pahlawan">
+                        <h2 class="hero-name" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="700">
+                            Mohammad Hatta</h2>
+                                <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="850">
+                                    Dr. Drs. H. Mohammad Hatta adalah negarawan dan ekonom Indonesia yang menjabat
+                                    sebagai
+                                    Wakil Presiden Indonesia pertama. Ia bersama Soekarno memainkan peranan sentral
+                                    dalam
+                                    perjuangan kemerdekaan Indonesia dari penjajahan Belanda sekaligus
+                                    memproklamirkannya
+                                    pada 17 Agustus 1945.
+                                </p>
+                    </div>
+                    <div class="break"></div>
+                </li>
+                <li>
+                    <div class="left-side-pahlawan" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+                        <img src="img/hero-3.jpg">
+                    </div>
+                    <div class="right-side-pahlawan">
+                        <h2 class="hero-name" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="700">Cut
+                            Nyak Dien</h2>
+                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="850">
+                            Cut Nyak Dhien adalah seorang Pahlawan Nasional Indonesia dari Aceh yang berjuang melawan
+                            Belanda pada masa Perang Aceh. Setelah wilayah VI Mukim diserang, ia mengungsi, sementara
+                            suaminya Ibrahim Lamnga bertempur melawan Belanda.
+                        </p>
+                    </div>
+                    <div class="break"></div>
+                </li>
+                <li>
+                    <div class="left-side-pahlawan" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
+                        <img src="img/hero-4.jpg">
+                    </div>
+                    <div class="right-side-pahlawan">
+                        <h2 class="hero-name" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="700">
+                            Diponegoro</h2>
+                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-delay="850">
+                            Bendara Pangeran Harya Dipanegara adalah salah seorang pahlawan nasional Republik Indonesia.
+                            Pangeran Diponegoro terkenal karena memimpin Perang Diponegoro/Perang Jawa melawan
+                            pemerintah Hindia Belanda. Perang tersebut tercatat sebagai perang dengan korban paling
+                            besar dalam sejarah Indonesia.
+                        </p>
+                    </div>
+                    <div class="break"></div>
+                </li>
+            </ul>
         </div>
     </section>
 
     <!-- our team -->
     <section class="teamSection" id="team">
-        <h1 data-aos="fade-up" data-aos-duration="1300">Our Team</h1>
+        <h1 data-aos="fade-up" data-aos-duration="1000">Our Team</h1>
         <div class="content-team">
-            <div class="box-team" data-aos="fade-up" data-aos-duration="1300" data-aos-delay="550">
+            <div class="box-team" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                 <div class="team">
                     <div class="border-wrapper">
-                        <img src="http://fullstackdesigner.id/assets/images/fsd/instruktur/1.png" alt="Rizal">
+                        <img src="img/person-1.png" alt="Rizal">
                     </div>
                     <div class="text-team">
                         <h4>Ahmad Rizal</h4>
@@ -72,7 +142,7 @@
                 </div>
                 <div class="team">
                     <div class="border-wrapper">
-                        <img src="http://fullstackdesigner.id/assets/images/fsd/instruktur/2.png" alt="Kukuh">
+                        <img src="img/person-2.png" alt="Kukuh">
                     </div>
                     <div class="text-team">
                         <h4>Kukuh Wildan</h4>
@@ -88,13 +158,10 @@
     <script src="js/jquery-3.4.1.slim.js"></script>
     <script src="js/vue.js"></script>
     <!--  michalsnik github animation-->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+    <script src="js/aos.js"></script>
     <!-- end michalsnik github animation -->
     <script src="js/script.js"></script>
-    <script src="js/script-with-vue.js"></script>
+    <!-- <script src="js/script-with-vue.js"></script> -->
 </body>
 
 </html>
