fix navbar , page-loading , padding fix

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
         <ul>
 
-            <li><a href="#home" class="page-scroll">Home</a></li>
-            <li><a href="#pahlawan" class="page-scroll">Pahlawan</a></li>
-            <li><a href="#team" class="page-scroll">Team</a></li>
+            <li class="page-scroll"><a href="#home" >Home</a></li>
+            <li class="page-scroll"><a href="#pahlawan" >Pahlawan</a></li>
+            <li class="page-scroll"><a href="#team" >Team</a></li>
         </ul>
     </nav>
 
-
+    <div class="page-loader"></div>
     <!-- container -->
     <div class="container-first" id="home">
         <div class="left-box w3-container">
